feat: add switch profile UI (#3307)
* feat: create profile screen, add switch button

Signed-off-by: Prakhar Agarwal <prakharagarwal3031@gmail.com>

* feat: add profile item

Signed-off-by: Prakhar Agarwal <prakharagarwal3031@gmail.com>

---------

Signed-off-by: Prakhar Agarwal <prakharagarwal3031@gmail.com>

--- a/app/i18n/raw-i18n/source/en.json
+++ b/app/i18n/raw-i18n/source/en.json
@@ -2301,6 +2301,7 @@
         "tapToAddPhoneNumber": "Tap to add phone number",
         "loginMethods": "Login Methods",
         "level": "Level {level: string}",
+        "switch": "switch",
         "accountLevel": "Account Level",
         "upgrade": "Upgrade your account",
         "logOutAndDeleteLocalData": "Log out and clear all local data",
@@ -2341,6 +2342,10 @@
         "yourAccountId": "Your Account ID",
         "accountId": "Account ID",
         "copy": "Copy"
+    },
+    "ProfileScreen": {
+        "addNew": "Add new",
+        "logout": "Logout"
     },
     "TotpRegistrationInitiateScreen": {
         "title": "Two-factor authentication",
@@ -2578,6 +2583,7 @@
         "phone": "Phone",
         "phoneNumber": "Phone Number",
         "preimageProofOfPayment": "Preimage / Proof of Payment",
+        "profile": "Profiles",
         "rate": "Rate",
         "reauth": "Your session has expired. Please log in again.",
         "restart": "Restart",
@@ -2728,7 +2734,7 @@
         "drivingAdoption": "I'm driving Bitcoin adoption using Blink.",
         "connectOnSocial": "Connect on social: ",
         "fullDetails": "Full details at ",
-        "learnMore": "Learn more about Adopting Bitcoin at ",
+        "learnMore": "Learn more about Adopting Bitcoin at",
         "mayChallenge": {
             "title": "May Challenge!",
             "description": "Grow your inner circle by 6 for a chance to win a set of Pizzas on your next Bitcoin Meetup.",
