feat: add switch account functionality (#3308)
* feat: create profile screen, add switch button

Signed-off-by: Prakhar Agarwal <prakharagarwal3031@gmail.com>

* feat: add profile item

Signed-off-by: Prakhar Agarwal <prakharagarwal3031@gmail.com>

* feat: loads data from persistant state, displays it, switch b/w accounts,  log out, and add new user

Signed-off-by: Prakhar Agarwal <prakharagarwal3031@gmail.com>

* feat: fetch usernames from backend

Signed-off-by: Prakhar Agarwal <prakharagarwal3031@gmail.com>

* feat: display profiles(fix #fb24fb) and enable switching

Signed-off-by: Prakhar Agarwal <prakharagarwal3031@gmail.com>

* fix: show switch option only when user is authenticated

Signed-off-by: Prakhar Agarwal <prakharagarwal3031@gmail.com>

* fix: call logout mutation

Signed-off-by: Prakhar Agarwal <prakharagarwal3031@gmail.com>

* fix: navigate to home screen on switching profile

Signed-off-by: Prakhar Agarwal <prakharagarwal3031@gmail.com>

* fix: switch icon color

Signed-off-by: Prakhar Agarwal <prakharagarwal3031@gmail.com>

* fix: disable back when loading data

Signed-off-by: Prakhar Agarwal <prakharagarwal3031@gmail.com>

* fix: go back 1 screen on profile switch

Signed-off-by: Prakhar Agarwal <prakharagarwal3031@gmail.com>

---------

Signed-off-by: Prakhar Agarwal <prakharagarwal3031@gmail.com>

--- a/app/i18n/raw-i18n/source/en.json
+++ b/app/i18n/raw-i18n/source/en.json
@@ -2345,7 +2345,8 @@
     },
     "ProfileScreen": {
         "addNew": "Add new",
-        "logout": "Logout"
+        "logout": "Logout",
+        "error": "Unable to fetch profiles at this time"
     },
     "TotpRegistrationInitiateScreen": {
         "title": "Two-factor authentication",
